objects/Cases_snapshot__c.object
<CustomObject>
    <label>Dx Open Cases</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Dx Open Cases Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dx Open Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CaseRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Cases_snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>CaseRef__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Open__c</fullName>
        <label>Date Time Open</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date Time Closed</label>
        <type>DateTime</type>
    </fields>
</CustomObject>